--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head><title><%= title %> </title>
+	<head><title class="title"><%= title %> </title>
 <%= csrf_meta_tag %>
 
 
