--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,27 +4,36 @@
 <%= csrf_meta_tag %>
 
 
-<%= stylesheet_link_tag 'screen', :media => 'screen' %>
-<%= stylesheet_link_tag 'print', :media => 'print' %>
-
-
+<%= stylesheet_link_tag "application", :media => "all" %>
+<%= javascript_include_tag "application" %>
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 	</head>
 	
 <body>
-	<div class="container">
-		<header>
-			--------Header--------
-		</header>
-		<nav class="round">
-			<ul>
-				<li><%= link_to "Home", '#' %></li>
-				<li><%= link_to "Home", '#' %></li>
-				<li><%= link_to "Home", '#' %></li>
-			</ul>
-		</nav>	
-		<%= yield %>
-	</div>
-	
+
+
+<header class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+         <%= link_to image_tag("sprakas-logo.gif", :alt => "Sunil Prakash"), '#' %>
+          <nav>
+            <ul class="nav pull-right">
+              <li><%= link_to "Home",    '#' %></li>
+              <li><%= link_to "Help",    '#' %></li>
+              <li><%= link_to "Sign in", '#' %></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+
+
 </body>	
 
 </html>
