--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,13 @@
+<div class="center hero-unit">
+  <h1>Welcome to Commute</h1>
 
-	<h1>Pages#home</h1>
-	<p>Find me in app/views/pages/home.html.erb</p>
+  <h2>
+    This is the home page for the
+    <a href="#">Sunil Prakash's </a>
+    communication application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', :class=> "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", :alt=> "Rails"), 'http://rubyonrails.org/' %>
