--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 	<head><title class="title"><%= title %> </title>
 <%= csrf_meta_tag %>
 
-
 <%= stylesheet_link_tag "application", :media => "all" %>
+<%= stylesheet_link_tag "custom", :media => "all" %>
+
 <%= javascript_include_tag "application" %>
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
