--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<% provide(:title, 'Contact') %>
+<h1>Contact</h1>
+<p>Do not contact right now!!</p>
