--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,15 @@
 	</head>
 	
 <body>
-<%= render 'layouts/header' %>
+	<%= render 'layouts/header' %>
 
-    <div class="container">
+    <div class="container main-content">
+    	<% flash.each do |key, value| %>
+    		<div class="alert alert-<%=key %>"><%=value %></div>
+    	<% end %>	
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
 
 
