--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -191,9 +191,12 @@ input, textarea, select, .uneditable-input {
 .users {
   list-style: none;
   margin: 0;
+  display:block;
+  clear:both;
   li {
     overflow: auto;
-    padding: 10px 0;
+    padding: 20px 0;
+
     border-top: 1px solid $grayLighter;
     &:last-child {
       border-bottom: 1px solid $grayLighter;
