fixed text field size

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -231,3 +231,8 @@ aside {
     margin-bottom: 5px;
   }
 }
+
+/* others */
+input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"] {
+    height: 40px;
+}
