--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,75 @@
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+<script src="http://js.pusherapp.com/1.9/pusher.min.js"></script>
+<% if signed_in? %>
+
+<script type="text/javascript" charset="utf-8">
+  $(function() {
+    
+    var pusher = new Pusher('00cfb85d263630a60071'); // Replace with your app key
+    var channel = pusher.subscribe('msg'+<%= current_user.id %>);
+
+    // Some useful debug msgs
+    pusher.connection.bind('connecting', function() {
+      $('div#status').text('Connecting to Pusher...');
+    });
+    pusher.connection.bind('connected', function() {
+      $('div#status').text('Connected to Pusher!');
+    });
+    pusher.connection.bind('failed', function() {
+      $('div#status').text('Connection to Pusher failed :(');
+    });
+    channel.bind('subscription_error', function(status) {
+      $('div#status').text('Pusher subscription_error for' +<%= current_user.id %>);
+    });
+
+  channel.bind('new_message'+<%= current_user.id %>, function(data) {
+
+    $("#contMessages").append(data.from + ' : ' + data.message + '<br/>');
+  msg = data.from + ' has sent you message: ' + data.message;
+  dom_notify(msg);
+});
+
+$("#chatter_btn").bind('click',function(){
+    $("#contMessages").append('<%= current_user.name %>' + ' : ' + $('#messaging_message').val() + '<br/>');
+});
+
+  });
+
+
+function dom_notify(msg) {
+  $('#notify').text(msg);
+  $('#notify').fadeIn();
+  setTimeout(function() {
+    $('#notify').fadeOut
+    ();
+  }, 2000);
+}
+
+</script>
+<% end %>
 	</head>
 	
 <body>
 	<%= render 'layouts/header' %>
 
     <div class="container main-content">
+      <div id="notify"></div>
     	<% flash.each do |key, value| %>
     		<div class="alert alert-<%=key %>"><%=value %></div>
     	<% end %>	
       <%= yield %>
+
+       <div id="status">
+       </div> 
+
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
 
 
+<%= render 'users/domessage' if signed_in?%>
 
 </body>	
 
