--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <script type="text/javascript" charset="utf-8">
   $(function() {
     
-    var pusher = new Pusher('00cfb85d263630a60071'); // Replace with your app key
+    var pusher = new Pusher('ccc8625b91229b8364a0'); 
     var channel = pusher.subscribe('msg'+<%= current_user.id %>);
 
     // Some useful debug msgs
