--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,9 +23,9 @@
   <h1>Welcome to Commute</h1>
 
   <h2>
-    This is the home page for the
-    <a href="#">Sunil Prakash's </a>
-    communication application.
+    The Fastest Gwrowing Communication Application.
+   
+    Use it Free.
   </h2>
 
   <%= link_to "Sign up now!", signup_path, :class=> "btn btn-large btn-primary" %>
