--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@ function dom_notify(msg) {
 	<%= render 'layouts/header' %>
 
     <div class="container main-content">
-      <div id="notify"></div>
+      <div id="notify" class="alert alert-info"></div>
     	<% flash.each do |key, value| %>
     		<div class="alert alert-<%=key %>"><%=value %></div>
     	<% end %>	
