--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
   channel.bind('new_message'+<%= current_user.id %>, function(data) {
 
     $("#contMessages").append(data.from + ' : ' + data.message + '<br/>');
-$('#contMessages').scrollTop($('#contMessages').height());
+ $('#contMessages').scrollTop($('#contMessages').scrollTop()+100);
 
   msg = data.from + ' has sent you message: ' + data.message;
   dom_notify(msg);
@@ -44,6 +44,7 @@ $('#contMessages').scrollTop($('#contMessages').height());
 
 $("#chatter_btn").bind('click',function(){
     $("#contMessages").append('<%= current_user.name %>' + ' : ' + $('#messaging_message').val() + '<br/>');
+    $('#contMessages').scrollTop($('#contMessages').scrollTop()+100);
 });
 
   });
