--- a/app/views/users/_domessage.html.erb
+++ b/app/views/users/_domessage.html.erb
@@ -18,7 +18,8 @@
       	      	 </span>
       	     </div> 
       	</div> 	 
-      	      	  <%= f.submit "Message", class: "btn btn-mini btn-inverse" ,id:"chatter_btn" %>
+
+      	      	  <%= f.submit "Message", class: "btn btn-small btn-inverse" ,id:"chatter_btn" %>
 
       </div>	
 
