--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   $(function() {
     
     var pusher = new Pusher('<%= Pusher.key %>'); 
-    var channel = pusher.subscribe('msg'+<%= current_user.id %>);
+    var channel = pusher.subscribe('private-'+<%= current_user.id %>);
 
     // Some useful debug msgs
     pusher.connection.bind('connecting', function() {
