--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,6 @@
 <% provide(:title, 'About') %>
 <h1>About</h1>
-<p>About the application</p>
+<p>Commute is the simplest communication application , which connects the individuals
+with the common intrest.</p>
+
+<p>@Developer: SunilPrakash @Analyst: iSunny </p>
