--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
   $(function() {
     
     var pusher = new Pusher('<%= Pusher.key %>'); 
-    var channel = pusher.subscribe('private-'+<%= current_user.id %>);
+    var channel = pusher.subscribe('presence-openCommute');
+
+    var uonlinecount = channel.members.count;
 
     // Some useful debug msgs
     pusher.connection.bind('connecting', function() {
@@ -46,6 +48,9 @@ $("#chatter_btn").bind('click',function(){
     $("#contMessages").append('<%= current_user.name %>' + ' : ' + $('#messaging_message').val() + '<br/>');
     $('#contMessages').scrollTop($('#contMessages').scrollTop()+100);
 });
+
+//$('div#usersCount').text('No of users Online: ' + uonlinecount);
+
 
   });
 
