--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script src="http://js.pusherapp.com/1.9/pusher.min.js"></script>
+<script src="https://d3dy5gmtp8yhk7.cloudfront.net/1.12/pusher.min.js"></script>
 <% if signed_in? %>
 
 <script type="text/javascript" charset="utf-8">
