--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   $(function() {
     
     var pusher = new Pusher('<%= Pusher.key %>'); 
-    var channel = pusher.subscribe('presence-openCommute');
+    var channel = pusher.subscribe('private-<%= current_user.id %>');
 
     var uonlinecount = channel.members.count;
 
